WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201438
[macCatalyst] Unable to upload non-image files using drag and drop
https://bugs.webkit.org/show_bug.cgi?id=201438
Summary
[macCatalyst] Unable to upload non-image files using drag and drop
Wenson Hsieh
Reported
2019-09-03 16:50:54 PDT
To reproduce: - Launch a macCatalyst app that contains an embedded WKWebView. - Load
https://whsieh.github.io/examples/file-input
in the embedded WKWebView. - Drop a PDF file from Finder into the gray dashed file upload area. Expected: page should be able to access the dropped PDF file (and subsequently dump information about the file in the output area below) Observed: the output area is blank
Attachments
Patch
(3.51 KB, patch)
2019-09-03 20:08 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-09-03 20:08:09 PDT
Created
attachment 377950
[details]
Patch
WebKit Commit Bot
Comment 2
2019-09-03 22:15:44 PDT
Comment on
attachment 377950
[details]
Patch Clearing flags on attachment: 377950 Committed
r249456
: <
https://trac.webkit.org/changeset/249456
>
WebKit Commit Bot
Comment 3
2019-09-03 22:15:46 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-09-03 22:16:19 PDT
<
rdar://problem/55006472
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug